fix text in  dark mode

--- a/client/src/pages/Educations/Education.css
+++ b/client/src/pages/Educations/Education.css
@@ -44,4 +44,7 @@
     width: 280px;
     margin-bottom: 10px;
   }
+  #dark .vertical-timeline-element-date {
+    color: black !important;
+  }
 }
